examples/test/testpolicy7849.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7849
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key21: value15
      key39: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value10
          key0: value22
          key35: value24
      podSelector:
        matchLabels:
          key18: value36
